--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
         "react-ga": "^3.3.1",
         "react-infinite-scroller": "^1.2.6",
         "react-query": "^3.39.3",
+        "recharts": "^2.7.1",
         "tailwindcss": "^3.3.2",
         "typescript": "^5.1.3"
     },
