--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
         "grpc-tools": "^1.12.4",
         "grpc-web": "^1.4.2",
         "next": "^13.4.6",
+        "next-plausible": "^3.11.1",
         "postcss": "^8.4.24",
         "protoc-gen-grpc-web": "^1.4.2",
         "react": "18.2.0",
