--- a/frontend/docker-compose.yaml
+++ b/frontend/docker-compose.yaml
@@ -8,6 +8,7 @@ services:
       - "3000:3000"
     environment:
       - BACKEND_PROXY=http://grpc-backend:8080
+      - HOST=http://localhost:3000
 
 networks:
   wenjim:
